<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!--RadioGroup para ingredientes principales de la pizza-->

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="411dp"
        android:layout_height="116dp"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/trozo_pizza" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/receta"
        app:layout_constraintBottom_toTopOf="@+id/ingredientePrincipal"
        app:layout_constraintEnd_toStartOf="@+id/txtNombreReceta"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.329" />

    <EditText
        android:id="@+id/txtNombreReceta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <RadioGroup
        android:id="@+id/ingredientePrincipal"
        android:layout_width="319dp"
        android:layout_height="46dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <RadioButton
            android:id="@+id/rbtn_carne"
            android:layout_width="101dp"
            android:layout_height="match_parent"
            android:text="@string/rbtn_carne" />

        <RadioButton
            android:id="@+id/rbtn_pollo"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:text="@string/rbtn_pollo" />

        <RadioButton
            android:id="@+id/rbtn_mix"
            android:layout_width="115dp"
            android:layout_height="match_parent"
            android:text="@string/rbtn_mix" />

    </RadioGroup>

    <!--RadioGroup para base de pizza-->

    <!--RadioGroup para ingredientes de pizza parte 1-->

    <!--RadioGroup para ingredientes de pizza parte 2-->

    <!--RadioGroup para aliños de pizza-->

    <RadioGroup
        android:id="@+id/base"
        android:layout_width="255dp"
        android:layout_height="49dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.425"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <RadioButton
            android:id="@+id/rbtn_blanca"
            android:layout_width="138dp"
            android:layout_height="match_parent"
            android:text="@string/blanca" />

        <RadioButton
            android:id="@+id/rbtn_roja"
            android:layout_width="118dp"
            android:layout_height="match_parent"
            android:text="@string/roja" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ingrediente_principal"
        app:layout_constraintBottom_toTopOf="@+id/ingredientePrincipal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.268"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNombreReceta" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/base"
        app:layout_constraintBottom_toTopOf="@+id/base"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.233"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ingredientePrincipal" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/ingredientes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.075"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/base" />

    <CheckBox
        android:id="@+id/cbx_cebolla"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:layout_marginBottom="1dp"
        android:text="@string/cebolla"
        app:layout_constraintBottom_toTopOf="@+id/cbx_palta"
        app:layout_constraintEnd_toStartOf="@+id/cbx_champinion"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <CheckBox
        android:id="@+id/cbx_champinion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="66dp"
        android:text="@string/champinion"
        app:layout_constraintBottom_toTopOf="@+id/cbx_tomate2"
        app:layout_constraintEnd_toStartOf="@+id/cbx_morron"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/cbx_cebolla"
        app:layout_constraintTop_toBottomOf="@+id/base" />

    <CheckBox
        android:id="@+id/cbx_morron"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="66dp"
        android:layout_marginBottom="1dp"
        android:text="@string/morron"
        app:layout_constraintBottom_toTopOf="@+id/cbx_tomate1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/cbx_champinion"
        app:layout_constraintTop_toBottomOf="@+id/base" />

    <CheckBox
        android:id="@+id/cbx_palta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="39dp"
        android:text="@string/palta"
        app:layout_constraintBottom_toTopOf="@+id/cbx_oregano"
        app:layout_constraintEnd_toStartOf="@+id/cbx_tomate2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cbx_cebolla" />

    <CheckBox
        android:id="@+id/cbx_tomate2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:text="@string/tomate_cherry"
        app:layout_constraintBottom_toTopOf="@+id/cbx_ajo"
        app:layout_constraintEnd_toStartOf="@+id/cbx_tomate1"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/cbx_palta"
        app:layout_constraintTop_toBottomOf="@+id/cbx_champinion" />

    <CheckBox
        android:id="@+id/cbx_tomate1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="39dp"
        android:text="@string/tomate"
        app:layout_constraintBottom_toTopOf="@+id/cbx_albaca"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/cbx_tomate2"
        app:layout_constraintTop_toBottomOf="@+id/cbx_morron" />

    <CheckBox
        android:id="@+id/cbx_oregano"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="39dp"
        android:text="@string/oregano"
        app:layout_constraintEnd_toStartOf="@+id/cbx_ajo"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cbx_palta" />

    <CheckBox
        android:id="@+id/cbx_ajo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/ajo"
        app:layout_constraintEnd_toStartOf="@+id/cbx_albaca"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/cbx_oregano"
        app:layout_constraintTop_toBottomOf="@+id/cbx_tomate2" />

    <CheckBox
        android:id="@+id/cbx_albaca"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="39dp"
        android:text="@string/albaca"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/cbx_ajo"
        app:layout_constraintTop_toBottomOf="@+id/cbx_tomate1" />

    <Button
        android:id="@+id/btn_recetas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:layout_marginBottom="20dp"
        android:onClick="ver_Recetas"
        android:text="@string/ver_recetas"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_guardar"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cbx_oregano" />

    <Button
        android:id="@+id/btn_guardar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="20dp"
        android:onClick="guardarPizza"
        android:text="@string/guardar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_recetas"
        app:layout_constraintTop_toBottomOf="@+id/cbx_albaca" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="19dp"
        android:layout_marginBottom="1dp"
        android:text="@string/alinios"
        app:layout_constraintBottom_toTopOf="@+id/cbx_oregano"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.102"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cbx_palta" />

</androidx.constraintlayout.widget.ConstraintLayout>